--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -23,11 +23,11 @@
     <fraction name="def_window_transition_scale">50%</fraction>
 
     <!-- Default value of Settings.System.ENABLE_FORWARD_LOOKUP -->
-    <integer name="def_forward_lookup">0</integer>
+    <!-- <integer name="def_forward_lookup">0</integer> -->
 
     <!-- Default value of Settings.System.ENABLE_PEOPLE_LOOKUP -->
-    <integer name="def_people_lookup">0</integer>
+    <!-- <integer name="def_people_lookup">0</integer> -->
 
     <!-- Default value of Settings.System.ENABLE_REVERSE_LOOKUP -->
-    <integer name="def_reverse_lookup">0</integer>
+    <!-- <integer name="def_reverse_lookup">0</integer> -->
 </resources>
